crates/ars-components/src/utility/live_region/snapshots/ars_components__utility__live_region__tests__live_region_root_off_non_atomic_relevant_all.snap
---
source: crates/ars-components/src/utility/live_region.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "live-region",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "off",
            ),
        ),
        (
            Aria(
                Relevant,
            ),
            String(
                "additions removals text",
            ),
        ),
        (
            Class,
            String(
                "ars-visually-hidden",
            ),
        ),
        (
            Id,
            String(
                "announcer",
            ),
        ),
    ],
    styles: [],
}
